# delivery_time_prediction

./: .gitignore  README.md  eda_cleaning.ipynb  environment.yml  model_training.py  pyproject.toml  setup.cfg
data/prepared/: prepared_data.parquet
final_combined/: __init__.py
final_combined/data/: __init__.py  load_data.py  sample_split.py
final_combined/evaluation/: __init__.py  evaluate_predictions.py
final_combined/feature_engineering/: __init__.py  feature_engineering.py
final_combined/modeling/: model_training.py
final_combined/preprocess/: __init__.py  eda_utils.py  preprocess.py
final_combined/visualization/: __init__.py  plot.py
tests/: test_feature_engineering.py
