[metadata]
name = final_combined
description = final combined project for D400 and D100
long_description = file: README.md
long_description_content_type = text/markdown
author = aaa
author_email = aaa


[options]
include_package_data = true
install_requires =
python_requires = >=3.8
packages = find:


[options.packages.find]
where = .
include =
    final_combined
